# gomoku

./: .coveragerc  .gitignore  README.md  pyproject.toml
docs/: implementation_document.md  requirements_specification.md  testing_report.md  user_guide.md
docs/weekly_reports/: weekly_report_1.md  weekly_report_2.md  weekly_report_3.md  weekly_report_4.md  weekly_report_5.md  weekly_report_6.md
src/: algorithms.py  game_board.py  gomoku.py  gomoku_ai.py  helpers.py  index.py  pygame_ui.py
src/tests/: game_board_test.py  gomoku_ai_test.py
