[project]
name = "gomoku"
version = "0.1.0"
description = ""
authors = [
    {name = "Matias Rinne",email = "147260381+Niria@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "coverage (>=7.11.0,<8.0.0)"
]
